--- a/estilos.css
+++ b/estilos.css
@@ -17,8 +17,8 @@ h2{
     width: 100%;
     height: 870px;
     background: #7F7FD5;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(176, 68%, 74%, 0.592), hsla(219, 67%, 72%, 0.587), hsla(240, 51%, 67%, 0.545)), url('../Club Fundejo/images/img1.jpg');  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(176, 68%, 74%, 0.592), hsla(219, 67%, 72%, 0.587), hsla(240, 51%, 67%, 0.545)), url('../Club Fundejo/images/img1.jpg'); 
+    background: -webkit-linear-gradient(to right, hsla(176, 68%, 74%, 0.592), hsla(219, 67%, 72%, 0.587), hsla(240, 51%, 67%, 0.545)), url('images/img1.jpg');  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(176, 68%, 74%, 0.592), hsla(219, 67%, 72%, 0.587), hsla(240, 51%, 67%, 0.545)), url('images/img1.jpg'); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
